# beekkon-bridge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
beekkon/: __init__.py  agent.py  api.py  auth.py  crypto.py  discovery.py  memory.py  models.py  protocol.py  router.py
docs/: api_reference.md  index.md  protocol_spec.md  quickstart.md
examples/: accounting_memory.db  agent_comptable.py  agent_crm.py  agent_juridique.py  legal_memory.db  run_workflow.py
menv/: pyvenv.cfg
menv/Scripts/: activate  activate.bat
tests/: test_agent.py  test_auth.py  test_crypto.py  test_discovery.py  test_memory.py  test_protocol.py
